# api-change-log-for-aws

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .taplo.toml  Dockerfile  README.md  justfile  pyproject.toml  redundant.txt  requirements.txt  setup.py
.github/workflows/: ecr.yaml  required-checks.yaml  validate.yaml
apichanges/: cli.py  icons.py  model.py  publisher.py  record.py  repo.py  sitebuild.py
assets/css/: docutils.css  site.css
templates/: index.jinja2  macros.jinja2  search.jinja2  service-commit.jinja2  service-map.jinja2  service.jinja2  template.jinja2
terraform/: cloudfront.tf  domain.tf  ecs_task.tf  ecs_vpc.tf  notice.py  provider.tf
terraform/task-definitions/: sitebuild.json
tf/: .terraform.lock.hcl  bucket.tf  certificate.tf  cloudfront.tf  domain.tf  ecs_cluster.tf  ecs_iam.tf  ecs_schedule.tf  ecs_task.tf  ecs_vpc.tf  notice.py  notice.tf  provider.tf  vars.tf
tools/: icon_build.py
