[tool.poetry]
  name        = "apichanges"
  version     = "0.1.0"
  description = "API changelog for AWS."
  authors     = ["TrustOnCloud <dev@trustoncloud.com>"]
  readme      = "README.md"

  [tool.poetry.dependencies]
    python           = "^3.11"
    arrow            = "^1.3.0"
    click            = "^8.1.7"
    boto3            = "^1.35.59"
    feedgen          = "^1.0.0"
    pygit2           = "^1.16.0"
    dataclasses-json = "^0.6.7"
    docutils         = "^0.21.2"
    jinja2           = "^3.1.4"

  [tool.poetry.group.dev.dependencies]
    djlint = "^1.36.1"
    ruff   = "^0.7.3"
    taplo  = "^0.9.3"

[tool.ruff]
  exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "site-packages",
  ]

  line-length  = 100
  indent-width = 4

  [tool.ruff.format]
    line-ending           = "auto"
    quote-style           = "double"
    indent-style          = "space"
    docstring-code-format = true

  [tool.ruff.lint]
    select = ["B", "E", "F", "I", "Q", "RUF", "W"]
    ignore = ["RUF012"]

[tool.djlint]
  indent          = 2
  max_blank_lines = 2
  max_line_length = 100
  profile         = "jinja"
  use_gitignore   = true
  ignore          = "J018"

[build-system]
  requires      = ["poetry-core"]
  build-backend = "poetry.core.masonry.api"
